reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__box_root_openapi_unwrapping.snap
---
source: reflectapi-demo/src/tests/serde.rs
assertion_line: 1091
expression: "reflectapi::codegen::openapi::Spec::from(&schema)"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TreeNode"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TreeNode"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.TreeNode": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.TreeNode",
        "required": [
          "child",
          "label"
        ],
        "properties": {
          "child": {
            "oneOf": [
              {
                "description": "Null",
                "type": "null"
              },
              {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TreeNode"
              }
            ]
          },
          "label": {
            "$ref": "#/components/schemas/std.string.String"
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      }
    }
  }
}
