reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__datetime-2.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_typescript_code :: < TestStruct > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.serde.TestStruct,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<reflectapi_demo.tests.serde.TestStruct, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace serde {
      export interface TestStruct {
        duration: std.time.Duration;
        naive_time: string;
        naive_date: string;
        naive_datetime: string;
        date_time_fixed_offset: string;
        date_time_utc: string;
        date_time_local: string;
      }
    }
  }
}

export namespace std {
  export namespace time {
    /**
     * Time duration type
     */
    export interface Duration {
      secs: number /* u64 */;
      nanos: number /* u32 */;
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.serde.TestStruct,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.serde.TestStruct,
        {},
        reflectapi_demo.tests.serde.TestStruct,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
